phase2_Dev/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Additional_Email_to_Copy__c</fullName>
        <inlineHelpText>This email address will be used to send the automatic notice for this appointment in addition to the contact email address.</inlineHelpText>
        <label>Additional Email to Copy</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Bucket__c</fullName>
        <description>This formula is used in Reports as a bucket in a dashboard component</description>
        <formula>IF(
 ActivityDate &lt; TODAY(), &quot;1 - Overdue&quot;,
 IF ( ActivityDate = TODAY(), &quot;2 - Due Today&quot;, IF ( ActivityDate &lt;= TODAY()+7, &quot;3 - Due in the next 7 days&quot;, &quot;4 - Due Later&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_In_My_Region__c</fullName>
        <description>Determine if the task is associated with the region of the user (used for admin queue tasks)</description>
        <formula>CONTAINS( Subject ,  TEXT($User.Region__c ))</formula>
        <label>Is In My Region</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.RECORDTYPE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>